--- a/src/styles.css
+++ b/src/styles.css
@@ -72,17 +72,22 @@ p {
   outline: none;
 }
 
+.autocomplete-results-wrapper {
+  display: flex;
+  gap: 16px; /* espace entre les deux conteneurs */
+}
+
+.autocomplete-results-container {
+  display: none; /* passe à 'block' ou 'flex' via JS si besoin */
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+}
+
 .autocomplete-results {
   display: flex;
   background-color: #fff;
   min-width: 300px;
   overflow-y: auto;
   max-height: 600px;
-}
-
-.autocomplete-results-container {
-  display: none;
-  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .prediction {
