--- a/src/styles.css
+++ b/src/styles.css
@@ -192,7 +192,24 @@ p {
 }
 
 
-
+#suggestions-list {
+  border-radius: 12px;
+  box-shadow: 0 2px 4px #0003, 0 -1px #00000005;
+  box-sizing: border-box;
+  position: absolute;
+  max-width: 320px;
+  width: 100%;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  list-style: none;
+  max-height: 80vh;
+  margin: 5px 0 0;
+  padding: 0;
+  display: none;
+  overflow-y: auto;
+  background-color: #fff;
+}
 
 .localities-result-title {
   flex-grow: 1;
