--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,15 @@ p {
   border-top: 1px solid #edebeb;
 }
 
+.prediction.disabled {
+  pointer-events: none;
+  user-select: none;
+  opacity: 0.6;
+  font-style: italic;
+  cursor: default;
+  background-color: #f9f9f9; /* ou #f0f0f0 pour un fond discret */
+}
+
 .prediction:hover {
   background-color: #eee;
   cursor: pointer;
@@ -179,7 +188,7 @@ p {
   border-radius: 12px;
   box-shadow: 0 2px 4px #0003, 0 -1px #00000005;
   box-sizing: border-box;
-  max-width: 320px;
+  max-width: 500px;
   width: 100%;
   top: 100%;
   z-index: 1;
